src/test/deca/syntax/valid/provided/hello.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023

{
        int i;
        i = 3 + 1;
        println(i);
}
